💄 fixed style clipping

--- a/app/static/horizontal_timeline.css
+++ b/app/static/horizontal_timeline.css
@@ -13,7 +13,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   .timeline {
   position: relative;
   padding: 1.5em 0 0.5em;
-  margin: 1em 0 1em 100px;
+  margin: 3em 3em 3em 100px;
   border: 1px solid #ddd;
   border-width: 0 1px;
 }
@@ -94,7 +94,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   background: #fff;
   border-radius: 0.5em;
   padding: 0.5em 1em;
-  text-align: center;
+  text-align: left;
   -webkit-box-shadow: 0 2px 2px #fff;
   box-shadow: 0 2px 2px #fff;
   position: absolute;
@@ -104,7 +104,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 }
 .timeline .line .events .event .label label {
   display: block;
-  font-size: 16px;
+  font-size: 13px;
   font-weight: bold;
   margin: 0 0 5px 0;
 }
